fix the alignment with styling

--- a/styles/storyShow.scss
+++ b/styles/storyShow.scss
@@ -84,20 +84,39 @@ div span .progress-title {
   padding: 20px;
 }
 
+.show-heart {
+  display:flex;
+  align-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  margin-left: 7em;
+}
+
 // div, should apply to all divs *
 #teller-buttons {
   align-content: center;
+  align-items: center;
   background-color: tan;
   border: 4px solid maroon;
   border-radius: 29px;
   color: maroon;
   display: flex;
-  // flex-direction: column;
+  flex-direction: column;
   font-size: 32px;
   font-family: 'Luckiest Guy';
-  // justify-content: flex-end;
+  // justify-content: center;
   margin: 0.5em;
   padding: 20px;
+  width: 80%;
+  margin-left: 5.5em;
+  margin-right: 5.5em;
+}
+
+#show-textSubmit {
+  display:flex;
+  align-content: space-around;
+  align-items: center;
+  flex-direction: row;
 }
 
 button img {
